# LordofTheBrines

./: .gitignore  Contributing to LordofTheBrines.md  Core API.md  LICENSE  LordofTheBrines Threat Intelligence Integration Guide.md  LordofTheBrines.md  LordofTheBrines_cli.py  Malicious Pickle Examples.md  README.md  Statistical Methods in LordofTheBrines.md  __init__.py  analysis_results.json  analyze_results.py  analyzer.py  bayesian.py  ci.yml  config.py  detector.py  disassemble_harmless.py  enhanced_scanner.py  ensemble.py  extractor.py  fickling_hook.py  generate_malicious_pickles.py  harmless.pkl  logger.py  main.py  malicious_echo.pkl  malicious_subprocess_ls.pkl  malicious_subprocess_touch.pkl  malicious_touch.pkl  ml_detector.py  mypy.ini  provider.py  pyproject.toml  report.html  requirements.txt  result.py  run_analysis.py  runner.py  (+4 more)
LordofTheBrines.egg-info/: PKG-INFO  SOURCES.txt
examples/: html_report_example.html
rules/: pickle_rules.yar
scripts/: ci_scan.py
