[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LordofTheBrines"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A framework for detecting malicious pickle files."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/your-username/LordofTheBrines"
"Bug Tracker" = "https://github.com/your-username/LordofTheBrines/issues"


